--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ tailwind.config = {
 <section id="top" class="min-h-screen flex flex-col items-center justify-center pt-24 relative">
 
   <!-- KA PHOTO RL -->
-  <div class="flex items-center justify-center gap-4 md:gap-6">
+  <div class="flex items-center justify-center gap-2 md:gap-4">
 
     <h1 class="font-bricolage text-[18vw] leading-none font-extrabold opacity-0 animate-slide-left">
       KA
@@ -159,7 +159,7 @@ tailwind.config = {
 
     <div class="w-[22vw] max-w-[260px] opacity-0 animate-photo-in animate-float">
       <img
-        src="images/karl_pogi.jpg"
+        src="images/karl_pogi1.jpg"
         alt="Portrait of Karl"
         class="w-full h-auto object-cover"
       />
