--- a/index.html
+++ b/index.html
@@ -29,12 +29,26 @@ tailwind.config = {
         bricolage: ['Bricolage Grotesque', 'sans-serif'],
       },
 
-      animation: {
-        'slide-left': 'slideLeft 1s ease-out forwards',
-        'slide-right': 'slideRight 1s ease-out forwards',
-        'photo-in': 'photoIn 1.1s ease-out forwards',
-        'float': 'float 6s ease-in-out infinite',
-      },
+                    backdropBlur: {
+                        'glass': '12px',
+                    },
+                    boxShadow: {
+                        'editorial': '0 8px 32px rgba(0, 0, 0, 0.1)',
+                        'editorial-strong': '0 12px 48px rgba(0, 0, 0, 0.15)',
+                        'glass': '0 8px 32px rgba(0, 0, 0, 0.3)',
+                    },
+                    animation: {
+                        'pulse-subtle': 'pulse-subtle 3s ease-in-out infinite',
+                        'float': 'float 6s ease-in-out infinite',
+                    },
+                    keyframes: {
+                        'pulse-subtle': {
+                            '0%, 100%': { 'opacity': '0.7' },
+                            '50%': { 'opacity': '1' },
+                        },
+                        'float': {
+                            '0%, 100%': { transform: 'translateY(0)' },
+                            '50%': { transform: 'translateY(-10px)' },
 
       keyframes: {
         slideLeft: {
