--- a/index.html
+++ b/index.html
@@ -131,6 +131,26 @@
       RL
     </h1>
 
+ </div>
+
+  <!-- Subtitle + Buttons -->
+  <div class="mt-12 flex flex-col items-center gap-6">
+
+    <p class="text-[11px] tracking-widest uppercase text-center text-editorial-gray">
+      English Language Studies • Creative Artist • Digital Designer
+    </p>
+
+    <div class="flex gap-4">
+      <a href="#projects"
+         class="text-xs uppercase tracking-widest border border-editorial-black px-5 py-2 hover:bg-editorial-black hover:text-white transition">
+        Explore Works
+      </a>
+      <a href="#contact"
+         class="text-xs uppercase tracking-widest border border-editorial-black px-5 py-2 hover:bg-editorial-black hover:text-white transition">
+        Connect With Me
+      </a>
+    </div>
+
   </div>
 </section>
 
