--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="lg:w-2/5">
                         <div class="relative">
                             <div class="absolute -inset-4 bg-gradient-to-r from-accent-blue to-accent-cyan rounded-2xl blur-lg opacity-30"></div>
-                            <img src="https://picsum.photos/400/500?random=3" alt="Portrait of Karl" class="relative w-full h-auto rounded-2xl object-cover shadow-2xl">
+                            <img src="images/karl-photo.jpg" alt="Portrait of Karl" class="relative w-full h-auto rounded-2xl object-cover shadow-2xl">
                         </div>
                         <div class="mt-8 grid grid-cols-3 gap-4">
                             <div class="glass-card rounded-lg p-4 text-center">
