--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <div class="text-sm text-gray-600">GWA</div>
                             </div>
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-blue">ELS</div>
+                                <div class="text-2xl font-orbitron text-accent-blue">English</div>
                                 <div class="text-sm text-gray-600">Major</div>
                             </div>
                         </div>
