--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
                         </div>
                         <div class="mt-8 grid grid-cols-3 gap-4">
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-navy-blue">3rd</div>
+                                <div class="text-2xl font-orbitron text-accent-blue">3rd</div>
                                 <div class="text-sm text-gray-600">Year College</div>
                             </div>
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-navy-blue">1.11</div>
+                                <div class="text-2xl font-orbitron text-accent-blue">1.11</div>
                                 <div class="text-sm text-gray-600">GWA</div>
                             </div>
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-navy-blue">English</div>
+                                <div class="text-2xl font-orbitron text-accent-blue">English</div>
                                 <div class="text-sm text-gray-600">Major</div>
                             </div>
                         </div>
