--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </div>
                         <div class="mt-8 grid grid-cols-3 gap-4">
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-navy">3rd</div>
+                                <div class="text-2xl font-orbitron text-accent-indigo">3rd</div>
                                 <div class="text-sm text-gray-600">Year College</div>
                             </div>
                             <div class="glass-card rounded-lg p-4 text-center">
