--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
                                 <div class="text-sm text-gray-600">Year College</div>
                             </div>
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-blue">1.11</div>
+                                <div class="text-2xl font-orbitron text-blue-900">1.11</div>
                                 <div class="text-sm text-gray-600">GWA</div>
                             </div>
                             <div class="glass-card rounded-lg p-4 text-center">
-                                <div class="text-2xl font-orbitron text-accent-blue">English</div>
+                                <div class="text-2xl font-orbitron text-blue-900">English</div>
                                 <div class="text-sm text-gray-600">Major</div>
                             </div>
                         </div>
